Bug 483841. Animated background images on visibility:hidden elements shouldn't cause any painting. r+sr=dbaron